--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -6,3 +6,32 @@
 @import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/code";
 @import "../node_modules/bootstrap/scss/grid";
+
+#user {
+    display: flex;
+    flex: 1;
+
+    flex-wrap: wrap;
+
+    justify-content: center;
+
+    .user {
+
+        display: flex;
+        flex: 1;
+
+        min-width: 100px;
+
+
+
+        img {
+            flex: 1;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+
+
+}
